--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Ben Straub"
-resume_title:                   "Software Engineer"
+resume_title:                   "Maker of Things"
 resume_contact_email:           "ben@straub.cc"
 
 # use "yes" to display the email contact button,
@@ -24,8 +24,8 @@ resume_looking_for_work:        "yes"
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_projects:        true
 resume_section_skills:          true
+resume_section_projects:        false
 resume_section_recognition:     false
 resume_section_links:           false
 resume_section_associations:    false
@@ -37,7 +37,7 @@ resume_social_links:
   resume_twitter_url:           "http://twitter.com/benstraub"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/in/benstraub1"
   # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "http://ben.straub.cc"
 
