--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Ben Straub"
-description: "A well-rounded engineer with broad and deep knowledge."
+description: ":+1: Hire!"
 
 # Build settings
 markdown: kramdown
